[package]
name = "voxel-engine-cpp-launcher"
version = "Beta 1.0.0"
edition = "2021"
authors = ["InfiniteCoder <info@infinitecoder.org>"]
description = "A launcher for VoxelEngine"
readme = "README.md"
repository = "https://github.com/InfiniteCoder01/voxel-engine-cpp-launcher"
license = "MIT"
keywords = ["VoxelEngine-Cpp", "launcher"]
categories = ["game-engines", "games"]

[dependencies]
env_logger = "0.11"
home = "0.5.9"

eframe = "0.26"
egui_extras = { version = "0.26", features = ["all_loaders"] }
image = { version = "0.24", features = ["png"] }
egui-phosphor = { version = "0.4.0", features = ["fill"] }
egui-notify = "0.13.0"

octocrab = "0.34.1"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
reqwest = "0.11.24"
tokio-process-stream = "0.4.0"
zip-extract = "0.1.3"

ron = "0.8.1"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
tokio-stream = "0.1.14"
